--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,43 +6,47 @@ services:
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - 80:80
+      - "4080:80"  # Changed from 80:80 to 8080:80
     links:
       - api
       - ui
     restart: on-failure:3
 
   api:
-      build:
-        context: ./api
-      volumes:
-        - ./downloads:/downloads
-        - ./api:/app
-        - ./logs:/app/logs
-      environment:
-        - FLASK_ENVIRONMENT=prod
-        - POSTGRES_HOST=db
-      env_file:
-        - ./.env
-      depends_on:
-        - db
-      restart: on-failure:3
+    build:
+      context: ./api
+    volumes:
+      - ./downloads:/downloads
+      - ./api:/app
+      - ./logs:/app/logs
+    environment:
+      - FLASK_ENVIRONMENT=prod
+      - POSTGRES_HOST=db
+    env_file:
+      - ./.env
+    depends_on:
+      - db
+    restart: on-failure:3
 
   ui:
-      build:
-        context: ./ui
-      volumes:
-        - ./ui:/app
-      environment:
-        - API_URL=/api
-      env_file:
-        - ./.env
-      restart: on-failure:3
+    build:
+      context: ./ui
+    volumes:
+      - ./ui:/app
+    environment:
+      - API_URL=/api
+    env_file:
+      - ./.env
+    restart: on-failure:3
 
   db:
     image: postgres:13-alpine
     volumes:
       - ./db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=autolycus
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
     env_file:
       - ./.env
     restart: on-failure:3
