--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,51 +2,127 @@ version: '3'
 
 services:
   proxy:
-    image: nginx:1.17-alpine
+    image: 'nginx:1.17-alpine'
     volumes:
-      - ./proxy/nginx.conf:/etc/nginx/conf.d/default.conf
+      - '/data/coolify/applications/kko0k8kwskcc0k0cwccgc88g/proxy/nginx.conf:/etc/nginx/conf.d/coolify.conf'  # Changed the mount path
     ports:
-      - "4080:80"  # Changed from 80:80 to 8080:80
+      - '4080:80'
     links:
       - api
       - ui
-    restart: on-failure:3
+    restart: 'on-failure:3'
+    container_name: proxy-kko0k8kwskcc0k0cwccgc88g-091229581148
+    labels:
+      - coolify.managed=true
+      - coolify.version=4.0.0-beta.380
+      - coolify.applicationId=4
+      - coolify.type=application
+      - coolify.name=proxy-kko0k8kwskcc0k0cwccgc88g-091229581148
+      - coolify.pullRequestId=0
+    networks:
+      kko0k8kwskcc0k0cwccgc88g: null
+    environment:
+      COOLIFY_BRANCH: '"main"'
+      COOLIFY_CONTAINER_NAME: '"proxy-kko0k8kwskcc0k0cwccgc88g-091229581148"'
 
   api:
     build:
       context: ./api
     volumes:
-      - ./downloads:/downloads
-      - ./api:/app
-      - ./logs:/app/logs
+      - '/data/coolify/applications/kko0k8kwskcc0k0cwccgc88g/downloads:/downloads'
+      - '/data/coolify/applications/kko0k8kwskcc0k0cwccgc88g/api:/app'
+      - '/data/coolify/applications/kko0k8kwskcc0k0cwccgc88g/logs:/app/logs'
     environment:
-      - FLASK_ENVIRONMENT=prod
-      - POSTGRES_HOST=db
+      FLASK_ENVIRONMENT: prod
+      POSTGRES_HOST: db
+      COOLIFY_BRANCH: '"main"'
+      COOLIFY_CONTAINER_NAME: '"api-kko0k8kwskcc0k0cwccgc88g-091229593708"'
     env_file:
       - ./.env
     depends_on:
       - db
-    restart: on-failure:3
+    restart: 'on-failure:3'
+    container_name: api-kko0k8kwskcc0k0cwccgc88g-091229593708
+    labels:
+      - coolify.managed=true
+      - coolify.version=4.0.0-beta.380
+      - coolify.applicationId=4
+      - coolify.type=application
+      - coolify.name=api-kko0k8kwskcc0k0cwccgc88g-091229593708
+      - coolify.pullRequestId=0
+    networks:
+      kko0k8kwskcc0k0cwccgc88g: null
 
   ui:
     build:
       context: ./ui
     volumes:
-      - ./ui:/app
+      - '/data/coolify/applications/kko0k8kwskcc0k0cwccgc88g/ui:/app'
     environment:
-      - API_URL=/api
+      API_URL: /api
+      COOLIFY_BRANCH: '"main"'
+      COOLIFY_CONTAINER_NAME: '"ui-kko0k8kwskcc0k0cwccgc88g-091229609058"'
+      COOLIFY_URL: 'http://ekwgswsw0kkwso4oswssks8s.142.171.85.223.sslip.io:4080'
+      COOLIFY_FQDN: 'ekwgswsw0kkwso4oswssks8s.142.171.85.223.sslip.io:4080'
     env_file:
       - ./.env
-    restart: on-failure:3
+    restart: 'on-failure:3'
+    container_name: ui-kko0k8kwskcc0k0cwccgc88g-091229609058
+    labels:
+      - coolify.managed=true
+      - coolify.version=4.0.0-beta.380
+      - coolify.applicationId=4
+      - coolify.type=application
+      - coolify.name=ui-kko0k8kwskcc0k0cwccgc88g-091229609058
+      - coolify.pullRequestId=0
+      - traefik.enable=true
+      - traefik.http.middlewares.gzip.compress=true
+      - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
+      - traefik.http.routers.http-0-kko0k8kwskcc0k0cwccgc88g-ui.entryPoints=http
+      - traefik.http.routers.http-0-kko0k8kwskcc0k0cwccgc88g-ui.middlewares=gzip
+      - 'traefik.http.routers.http-0-kko0k8kwskcc0k0cwccgc88g-ui.rule=Host(`ekwgswsw0kkwso4oswssks8s.142.171.85.223.sslip.io`) && PathPrefix(`/`)'
+      - traefik.http.routers.http-0-kko0k8kwskcc0k0cwccgc88g-ui.service=http-0-kko0k8kwskcc0k0cwccgc88g-ui
+      - traefik.http.services.http-0-kko0k8kwskcc0k0cwccgc88g-ui.loadbalancer.server.port=4080
+      - 'caddy_0.encode=zstd gzip'
+      - 'caddy_0.handle_path.0_reverse_proxy={{upstreams 4080}}'
+      - 'caddy_0.handle_path=/*'
+      - caddy_0.header=-Server
+      - 'caddy_0.try_files={path} /index.html /index.php'
+      - 'caddy_0=http://ekwgswsw0kkwso4oswssks8s.142.171.85.223.sslip.io'
+      - caddy_ingress_network=kko0k8kwskcc0k0cwccgc88g
+    networks:
+      kko0k8kwskcc0k0cwccgc88g: null
 
   db:
-    image: postgres:13-alpine
+    image: 'postgres:13-alpine'
     volumes:
-      - ./db:/var/lib/postgresql/data
+      - '/data/coolify/applications/kko0k8kwskcc0k0cwccgc88g/db:/var/lib/postgresql/data'
     environment:
-      - POSTGRES_DB=autolycus
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      POSTGRES_DB: autolycus
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      COOLIFY_BRANCH: '"main"'
+      COOLIFY_CONTAINER_NAME: '"db-kko0k8kwskcc0k0cwccgc88g-091229614470"'
     env_file:
       - ./.env
-    restart: on-failure:3
+    restart: 'on-failure:3'
+    container_name: db-kko0k8kwskcc0k0cwccgc88g-091229614470
+    labels:
+      - coolify.managed=true
+      - coolify.version=4.0.0-beta.380
+      - coolify.applicationId=4
+      - coolify.type=application
+      - coolify.name=db-kko0k8kwskcc0k0cwccgc88g-091229614470
+      - coolify.pullRequestId=0
+    networks:
+      kko0k8kwskcc0k0cwccgc88g: null
+
+volumes: {}
+
+networks:
+  kko0k8kwskcc0k0cwccgc88g:
+    name: kko0k8kwskcc0k0cwccgc88g
+    external: true
+
+configs: {}
+secrets: {}
